<resources>
    <string name="app_name">eLink</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="login_text">회원 로그인</string>
    <string name="user_id">아이디</string>
    <string name="user_pass">비밀번호</string>
    <string name="user_name">이름</string>
    <string name="user_birth">생년월일</string>

    <!-- 월 데이터 배열 -->
    <string-array name="month_array">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <string-array name="post_categories">
        <item>질문답변</item>
        <item>자유 게시판</item>
    </string-array>

    <string-array name="post_interest">
        <item>프로그래밍</item>
        <item>인공지능</item>
        <item>데이터베이스</item>
        <item>네트워크</item>
        <item>보안</item>
        <item>웹 개발</item>
        <item>모바일 개발</item>
        <item>빅데이터</item>
        <item>클라우드 컴퓨팅</item>
        <item>사물인터넷(IoT)</item>
        <item>블록체인</item>
        <item>머신러닝</item>
        <item>딥러닝</item>
        <item>데이터 분석</item>
        <item>컴퓨터 그래픽스</item>
        <item>게임 개발</item>
        <item>운영체제</item>
        <item>소프트웨어 엔지니어링</item>
        <item>자연어 처리(NLP)</item>
        <item>로보틱스</item>
    </string-array>
</resources>